# reasonRL

./: .gitignore  README.md  README_zh-CN.md  pyproject.toml  train.py
configs/: grpo_config.yaml  grpo_lora_config.yaml
data/: gsm8k_test.jsonl
docs/: project_summary.md
nano_rl/advantage/: __init__.py  grpo_advantage.py
nano_rl/core/: config.py  interfaces.py  processor.py  types.py
nano_rl/data/: __init__.py  dataset.py
nano_rl/loss/: grpo_loss.py
nano_rl/reward/: math_reward.py
nano_rl/trainer/: base_trainer.py  grpo_trainer.py
nano_rl/workers/: model_worker.py  rollout_worker.py
reason_rl/: logger.py
reason_rl/advantage/: grpo_advantage.py
reason_rl/core/: config.py  interfaces.py  processor.py  profiler.py  types.py
reason_rl/loss/: __init__.py  grpo_loss.py
reason_rl/reward/: __init__.py  math_reward.py
reason_rl/trainer/: __init__.py  base_trainer.py  grpo_trainer.py
reason_rl/workers/: __init__.py  model_worker.py  rollout_worker.py
scripts/: prepare_gsm8k.py  process_data.py  train_grpo.py
