[project]
name = "nano-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "ipython>=8.38.0",
    "ray>=2.52.1",
    "torch",
    "flash-attn==2.7.2.post1",
    "transformers>=4.57.6",
    "vllm==0.7.2",
    "tqdm>=4.66.5",
    "wandb>=0.24.0",
    "peft>=0.18.1",
]

[tool.setuptools.packages.find]
include = ["nano_rl"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.14.14",
]

[[tool.uv.index]]
url = "https://wheels.vllm.ai/0.7.2/cu118"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu118"

[tool.uv]
package = true
no-build-isolation-package = ["flash-attn"]

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.7.2.post1"
requires-dist = ["torch", "einops", "setuptools"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false