[project]
name = "reason-rl"
version = "0.1.0"
description = "A simple, decoupled Reinforcement Learning framework for reasoning tasks, powered by Ray and vLLM."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "ray>=2.52.1",
    "torch",
    "flash-attn==2.7.2.post1",
    "transformers==4.49.0",
    "vllm==0.7.2",
    "wandb>=0.24.0",
    "peft>=0.18.1",
    "math-verify>=0.9.0",
    "dacite>=1.9.2",
    "tyro>=1.0.5",
    "loguru>=0.7.3",
    "rich>=14.3.1",
    "datasets>=2.19.1",
    "jupyter>=1.1.1",
    "tqdm>=4.66.5",
]

[tool.setuptools.packages.find]
include = ["reason_rl"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.14.14",
]

[[tool.uv.index]]
url = "https://wheels.vllm.ai/0.7.2/cu118"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu118"

[tool.uv]
package = true
no-build-isolation-package = ["flash-attn"]

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.7.2.post1"
requires-dist = ["torch", "einops", "setuptools"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
